--- a/src/app/components/imageGallery/css/imageGallery.css
+++ b/src/app/components/imageGallery/css/imageGallery.css
@@ -117,7 +117,7 @@
     }
 }
 
-.project-gallery__filters button {
+.project-gallery__filters .splide__slide {
     color: #000;
     padding: 1.8rem 0 1.5rem;
     border: none;
@@ -126,20 +126,20 @@
     text-transform: capitalize;
 }
 
-.project-gallery__filters button:hover {
+.project-gallery__filters .splide__slide:hover {
     border-bottom: 3px solid #ba0c2f;
     color: #000
 }
-.project-gallery__filters .splide__arrows--ltr button:hover{
+.project-gallery__filters .splide__arrows--ltr .splide__slide:hover{
     border-bottom: none;
 }
 
-.project-gallery__filters button:focus {
+.project-gallery__filters .splide__slide:focus {
     color: #000;
     text-decoration: none
 }
 
-.project-gallery__filters button.active {
+.project-gallery__filters .splide__slide.active {
     border-bottom: 3px solid #ba0c2f
 }
 
@@ -152,8 +152,24 @@
     line-height: 2.1rem;
     margin-bottom: 1.6rem;
     padding-bottom:0;
+    font-weight:bold;
 }
-
+.project-gallery .is-loading {
+    background: rgba(255,255,255,.8);
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    min-height: 200px;
+    top: -15px;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+}
+.project-gallery .is-loading span {
+   font-weight:bold;
+   align-self: center;
+   font-size:1.5rem;
+}
 .project-gallery .splide__track {
     width: 100%;
     margin: 0 4.5rem
@@ -166,24 +182,9 @@
 .project-gallery .splide__track .splide__list .splide__slide {
     display: flex;
     width: auto !important;
-    border: none;
-}
-
-.project-gallery .splide__track .splide__list .splide__slide.is-active {
-    border: none
-}
-
-.project-gallery .splide__track .splide__list .splide__slide:hover {
-    border-bottom: none;
-}
-
-.project-gallery .splide__track .splide__list .splide__slide.active {
-    border-bottom: none;
-}
-
-.project-gallery .splide__track .splide__list .splide__slide.active a {
-    border-bottom: none;
-    color: #000
+    border-top: none;
+    border-left:none;
+    border-right:none;
 }
 
 .project-gallery .splide__arrow {
@@ -216,7 +217,7 @@
 .project-gallery__load-more-container {
     display: flex;
     justify-content: center;
-    padding: 4rem 0 0 0
+    padding: .5rem 0 3rem 0
 }
 
 @media(min-width: 768px) {
@@ -252,7 +253,7 @@
 .project-gallery .tab-content-container {
     padding-bottom: 4rem;
     position: relative;
-    min-height: 210px;
+    min-height: 300px;
     display: flex;
     justify-content: center;
     flex-direction: column
@@ -282,7 +283,6 @@
 
 .select-dropdown-container .select-dropdown__single-value,.select-dropdown-container .select-dropdown__placeholder {
     font-size: 1.6rem;
-    font-family: "Inter-Regular";
     color: #000;
     margin: 0;
     text-transform: capitalize;
@@ -299,8 +299,8 @@
     box-shadow: none
 }
 
-.select-dropdown-container .select-dropdown__control--is-focused:hover {
-    border: 1px solid #b1b3b3
+.select-dropdown-container .select-dropdown__control--is-focused {
+    border: 1px solid #0bf;
 }
 
 .select-dropdown-container .select-dropdown__indicator-separator {
@@ -338,6 +338,7 @@
     width: 2.4rem;
     height: 2.8rem
 }
+
 .splide__container {
     box-sizing: border-box;
     position: relative
@@ -645,13 +646,9 @@
 }
 
 .splide__track--nav>.splide__list>.splide__slide {
-    border: 3px solid transparent;
     cursor: pointer
 }
 
-.splide__track--nav>.splide__list>.splide__slide.is-active {
-    border: 3px solid #000
-}
 
 .splide__arrows--rtl .splide__arrow--prev {
     left: auto;
