--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
   }
 }
 
-body {
+main {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -33,6 +33,9 @@ ul{
   list-style-type: disc;
   margin-left:1.3rem;
 
+}
+header{
+  position: fixed;
 }
 footer{
   background-color: #002d72;
@@ -66,7 +69,65 @@ h1, h2{
 .latest-projects-border:hover{
   text-decoration:none;
 }
+input{
+  background-color:#FFF;
+  border: 1px solid #d9d9d9
+}
 @layer utilities {
+  /* @-webkit-keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(calc(-300px * 8));
+    }
+  }
+  
+  @keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(calc(-300px * 8));
+    }
+  } */
+  .slider {
+    background: transparent;
+    margin: auto;
+    /* overflow: hidden; */
+    position: relative;
+    /* width: 1300px; */
+    display: flex;
+  }
+  /* .slider::before, .slider::after {
+    background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
+    content: "";
+    height: 100vh;
+    position: absolute;
+    width: 300px;
+    z-index: 2;
+  }
+  .slider::after {
+    right: 0;
+    top: 0;
+    transform: rotateZ(180deg);
+  }
+  .slider::before {
+    left: 0;
+    top: 0;
+  } */
+  .slider .slide-track {
+    -webkit-animation: scroll 30s linear infinite;
+            animation: scroll 30s linear infinite;
+    display: flex;
+    /* width: calc(300px * 8); */
+  }
+  .slider .slide {
+    height: auto;
+    width: auto;
+    align-self:center;
+  }
+
   .text-balance {
     text-wrap: balance;
   }
@@ -106,6 +167,14 @@ h1, h2{
       animation-timeline: view();
       animation-range-start: 200px;
       animation-range-end: 400px;
+    }
+  }
+  .animate-header{
+    @media (prefers-reduced-motion: no-preference)  {
+      animation-timeline:scroll();
+      animation-range-start: 0px;
+      animation-range-end: 200px;
+        transition:.15s ease-in-out;
     }
   }
   .profile-border{
